edited pom files to not skip building